<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="eula">Пользовательское соглашение</string>
    <string name="practicum_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">scotty200305@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="eula_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="found_nothing">Ничего не нашлось</string>
    <string name="internet_connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="empty_collection">Ваша медиатека пуста</string>
    <string name="empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="refresh">Обновить</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="time">Длительность</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_quit">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="delete_track">Удалить трек</string>
    <string name="delete_track_description">Хотите удалить трек?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="zero_tracks">0 треков</string>
    <string name="share_playlist_2">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_confirm">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="playlist_is_empty">В плейлисте нет треков</string>
</resources>