<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:title="@string/settings"/>

    <Switch android:id="@+id/night_mode_switch"
        style="@style/SwitchTint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_height"
        android:paddingHorizontal="@dimen/primary_padding"
        android:text="@string/dark_theme"
        android:textSize="@dimen/secondary_text_size"
        android:fontFamily="@font/ys_display_regular"
        android:textFontWeight="400"/>

    <TextView
        android:id="@+id/share_button"
        style="@style/SettingsTextview"
        android:text="@string/share"
        app:drawableEndCompat="@drawable/share_icon" />

    <TextView
        android:id="@+id/support_button"
        style="@style/SettingsTextview"
        android:text="@string/support"
        app:drawableEndCompat="@drawable/support" />

    <TextView
        android:id="@+id/eula_button"
        style="@style/SettingsTextview"
        android:text="@string/eula"
        app:drawableEndCompat="@drawable/eula_icon" />

</LinearLayout>