<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/blue">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/upper_bar_height"
        android:paddingTop="@dimen/secondary_padding"
        android:paddingHorizontal="@dimen/primary_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/primary_text_size"
            android:textColor="@color/white"/>

    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/search_button"
        app:cornerRadius="@dimen/primary_corner_radius"
        android:layout_marginTop="@dimen/secondary_margin"
        android:layout_marginHorizontal="@dimen/primary_margin"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/search_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"/>



    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/media_button"
        app:cornerRadius="@dimen/primary_corner_radius"
        android:layout_marginTop="@dimen/primary_margin"
        android:layout_marginHorizontal="@dimen/primary_margin"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/media_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/settings_button"
        app:cornerRadius="@dimen/primary_corner_radius"
        android:layout_marginTop="@dimen/primary_margin"
        android:layout_marginBottom="@dimen/secondary_margin"
        android:layout_marginHorizontal="@dimen/primary_margin"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/primary_text_size"
        app:icon="@drawable/settings_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black"/>




</LinearLayout>