<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guidLine_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guidLine_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guidLine_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guidLine_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="time1, year1, genre1, country1, album1"
        app:barrierDirection="end" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="w, 1:1"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/song_title"/>

    <TextView
        android:id="@+id/song_title"
        style="@style/PlayerActivityTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/cover"
        android:layout_marginTop="@dimen/secondary_margin"/>

    <TextView
        android:id="@+id/artist"
        style="@style/PlayerActivityTextView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/song_title"
        android:layout_marginTop="12dp"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        android:src="@drawable/add_icon"/>

    <ImageView
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/artist"
        app:layout_constraintBottom_toTopOf="@id/time1"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        style="@style/PlayButton"/>

    <ImageView
        android:id="@+id/like_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_2"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        android:src="@drawable/like_icon"/>

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        app:layout_constraintBottom_toTopOf="@id/time1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        style="@style/TextAppearance"
        android:textSize="14sp"
        android:text="00:00"/>

    <TextView
        android:id="@+id/country1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_1"
        android:layout_marginBottom="20dp"
        style="@style/PlayerActivityTextView2"
        android:text="@string/country"
        />

    <TextView
        android:id="@+id/genre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/country1"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_1"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:text="@string/genre"
        />

    <TextView
        android:id="@+id/year1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/genre1"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_1"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:text="@string/year"
        />

    <TextView
        android:id="@+id/album1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/year1"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_1"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:text="@string/album"
        />

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/album1"
        app:layout_constraintStart_toStartOf="@id/left_guidLine_1"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:text="@string/time"/>

    <TextView
        android:id="@+id/country2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:layout_marginBottom="20dp"
        style="@style/PlayerActivityTextView2"
        android:textAlignment="viewEnd"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSecondary"/>

    <TextView
        android:id="@+id/genre2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/country2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:textAlignment="viewEnd"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSecondary"/>

    <TextView
        android:id="@+id/year2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/genre2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:textAlignment="viewEnd"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSecondary"/>

    <TextView
        android:id="@+id/album2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/year2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:textAlignment="viewEnd"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSecondary"/>

    <TextView
        android:id="@+id/time2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/album2"
        app:layout_constraintEnd_toStartOf="@id/right_guidLine_1"
        app:layout_constraintStart_toEndOf="@id/barrier"
        android:layout_marginBottom="17dp"
        style="@style/PlayerActivityTextView2"
        android:textAlignment="viewEnd"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSecondary"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="album1,album2"
        android:visibility="visible"/>
</androidx.constraintlayout.widget.ConstraintLayout>
